# outdated

./: .gitignore  .travis.yml  .vim.custom  CHANGELOG.markdown  Guardfile  HLint.hs  README.markdown  outdated.cabal  package.nix  shell.nix
src/: Conf.hs  Latest.hs  Main.hs  Path.hs  Progress.hs  Wrong.hs
src/Conf/: Parse.hs
src/Latest/: Parse.hs  Type.hs
test/funct/: test.bats  test.sh
test/funct/asset/: arch.cabal  einval.cabal  enoparse.cabal  flags.cabal  impl.cabal  not-in-index.cabal  ok.cabal  os.cabal  outdated.cabal
test/spec/: ConfSpec.hs
test/spec/Conf/: ParseSpec.hs
